add documentation  admin roles
